alignment issue fixed

--- a/src/app/seenu/seenu/seenu.component.scss
+++ b/src/app/seenu/seenu/seenu.component.scss
@@ -19,3 +19,13 @@
 .red-txt{
     color: red !important;
 }
+.borrow-pages-cotainer{
+    padding-right: 64px;
+    padding-left: 64px;
+}
+@media (max-width: 992px){
+    .borrow-pages-cotainer{ 
+        padding-right: 2%;
+        padding-left: 2%;
+    }
+}
